# rust-passmgr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  crypto.rs  main.rs  model.rs  storage.rs
src/commands/: add.rs  get.rs  init.rs  list.rs  mod.rs  remove.rs  update.rs
