[package]
name = "rust_passmgr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
rand = "0.8" 
argon2 = "0.4" 
aes-gcm = "0.10" 
base64 = "0.21" 
zeroize = "1.5" 
rpassword = "7.0" 
anyhow = "1.0" 
self_update = "0.37"
